--- a/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingViewController.xib
+++ b/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLBeeKingViewController">
             <connections>
+                <outlet property="labCity" destination="Xky-ej-xbX" id="LnW-27-m2u"/>
                 <outlet property="pricingHeadView" destination="lKp-Op-vi3" id="Qnh-zJ-2dc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -65,6 +66,9 @@
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-Jo-gs9">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                            <connections>
+                                <action selector="chooseCityAction:" destination="-1" eventType="touchUpInside" id="1MO-ht-Tqx"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
