--- a/Beehive/Classes/Modules/Mine/Setting/LEFeedbackViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Setting/LEFeedbackViewController.xib
@@ -75,7 +75,7 @@
                         <constraint firstAttribute="height" constant="40" id="MNg-rW-aIh"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <state key="normal" title="发布">
+                    <state key="normal" title="提交">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
