--- a/Beehive/Classes/Modules/Mine/BeeLobby/Controller/LLBeeWelfareViewController.xib
+++ b/Beehive/Classes/Modules/Mine/BeeLobby/Controller/LLBeeWelfareViewController.xib
@@ -18,7 +18,6 @@
                 <outlet property="mainScrollView" destination="VAb-Af-ra3" id="ewN-qf-cfD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewContent" destination="9Jx-Of-MgA" id="fHi-ta-A49"/>
-                <outlet property="viewContentH" destination="G56-Iv-S1F" id="HI7-I4-Vxf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -58,7 +57,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Jx-Of-MgA">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="514"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5_7_3.5" translatesAutoresizingMaskIntoConstraints="NO" id="Dwf-m2-l3j">
                                     <rect key="frame" x="78.5" y="35" width="218" height="164"/>
@@ -201,9 +200,9 @@
                                 <constraint firstItem="w1o-Sh-OZ9" firstAttribute="top" secondItem="IwB-hR-TDH" secondAttribute="bottom" constant="30" id="Dtc-ox-Wdn"/>
                                 <constraint firstItem="Dwf-m2-l3j" firstAttribute="centerX" secondItem="9Jx-Of-MgA" secondAttribute="centerX" id="G56-Iv-S1F"/>
                                 <constraint firstAttribute="trailing" secondItem="IwB-hR-TDH" secondAttribute="trailing" constant="15" id="Luz-i4-hfy"/>
+                                <constraint firstAttribute="bottom" secondItem="S3K-M1-seq" secondAttribute="bottom" constant="30" id="ULL-Ct-grZ"/>
                                 <constraint firstItem="IwB-hR-TDH" firstAttribute="top" secondItem="Dwf-m2-l3j" secondAttribute="bottom" id="e0f-Ck-5bm"/>
                                 <constraint firstItem="IwB-hR-TDH" firstAttribute="leading" secondItem="9Jx-Of-MgA" secondAttribute="leading" constant="15" id="fzV-Hh-4M1"/>
-                                <constraint firstAttribute="height" constant="667" id="miD-0C-Nnp"/>
                                 <constraint firstItem="S3K-M1-seq" firstAttribute="top" secondItem="w1o-Sh-OZ9" secondAttribute="bottom" constant="30" id="s76-2r-xlc"/>
                                 <constraint firstItem="w1o-Sh-OZ9" firstAttribute="leading" secondItem="IwB-hR-TDH" secondAttribute="leading" id="suJ-RW-1C2"/>
                                 <constraint firstItem="Dwf-m2-l3j" firstAttribute="top" secondItem="9Jx-Of-MgA" secondAttribute="top" constant="35" id="w5w-ok-Dq9"/>
@@ -241,10 +240,10 @@
     </objects>
     <resources>
         <image name="5_7_3.1" width="74" height="210"/>
-        <image name="5_7_3.2" width="85" height="180"/>
-        <image name="5_7_3.3" width="79" height="27"/>
+        <image name="5_7_3.2" width="85" height="180.5"/>
+        <image name="5_7_3.3" width="79.5" height="27.5"/>
         <image name="5_7_3.4" width="73" height="29"/>
-        <image name="5_7_3.5" width="217" height="164"/>
+        <image name="5_7_3.5" width="217.5" height="164"/>
         <image name="5_7_3.6" width="154" height="23"/>
     </resources>
 </document>
