--- a/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingIntroViewController.xib
+++ b/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingIntroViewController.xib
@@ -12,6 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLBeeKingIntroViewController">
             <connections>
+                <outlet property="labDes1" destination="Wfy-pc-K4v" id="v0b-q4-gfC"/>
+                <outlet property="labDes2" destination="Lq9-Th-U8D" id="egT-20-FOY"/>
+                <outlet property="labDes3" destination="DK3-Wr-KaO" id="QD0-eM-49P"/>
+                <outlet property="labDes4" destination="Tf8-lj-4SR" id="69M-f9-M8S"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -40,7 +44,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3J-G1-Jeo">
-                            <rect key="frame" x="10" y="173" width="355" height="315.5"/>
+                            <rect key="frame" x="10" y="173" width="355" height="314"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1_7_8.4" translatesAutoresizingMaskIntoConstraints="NO" id="0x6-rm-Iwp">
                                     <rect key="frame" x="116.5" y="19" width="122" height="29"/>
@@ -62,65 +66,65 @@
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfy-pc-K4v">
-                                    <rect key="frame" x="39" y="92.5" width="98.5" height="15"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfy-pc-K4v">
+                                    <rect key="frame" x="39" y="92.5" width="98.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1_7_8.5" translatesAutoresizingMaskIntoConstraints="NO" id="qK9-Au-9jm">
-                                    <rect key="frame" x="15" y="121.5" width="15" height="15"/>
+                                    <rect key="frame" x="15" y="121" width="15" height="15"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="15" id="DBv-JK-xyR"/>
                                         <constraint firstAttribute="width" constant="15" id="rlN-hf-22a"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lq9-Th-U8D">
-                                    <rect key="frame" x="39" y="142" width="98.5" height="15"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lq9-Th-U8D">
+                                    <rect key="frame" x="39" y="141.5" width="98.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐权益" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8PL-ME-snd">
-                                    <rect key="frame" x="39" y="121" width="54" height="16"/>
+                                    <rect key="frame" x="39" y="120.5" width="54" height="16"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1_7_8.5" translatesAutoresizingMaskIntoConstraints="NO" id="k7i-D5-lyX">
-                                    <rect key="frame" x="15" y="171" width="15" height="15"/>
+                                    <rect key="frame" x="15" y="170" width="15" height="15"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="15" id="6LW-nM-9Ti"/>
                                         <constraint firstAttribute="height" constant="15" id="jGW-WZ-sRA"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DK3-Wr-KaO">
-                                    <rect key="frame" x="39" y="191.5" width="98.5" height="15"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="广告位权益、推荐" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DK3-Wr-KaO">
+                                    <rect key="frame" x="39" y="190.5" width="98.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开发中权益" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4UX-80-31w">
-                                    <rect key="frame" x="39" y="170.5" width="66.5" height="16"/>
+                                    <rect key="frame" x="39" y="169.5" width="66.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="除以上收益" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tf8-lj-4SR">
-                                    <rect key="frame" x="15" y="221.5" width="325" height="16"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="除以上收益" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tf8-lj-4SR">
+                                    <rect key="frame" x="15" y="220" width="325" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GJc-Pa-T6k">
-                                    <rect key="frame" x="97.5" y="262.5" width="160" height="28"/>
+                                    <rect key="frame" x="97.5" y="261" width="160" height="28"/>
                                     <color key="backgroundColor" red="1" green="0.28627450980000002" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="28" id="7g3-YH-a0C"/>
                                         <constraint firstAttribute="width" constant="160" id="gIt-1w-uNA"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <state key="normal" title="去城寨大厅">
+                                    <state key="normal" title="去城寨大厅选取城寨">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
@@ -195,7 +199,7 @@
         </view>
     </objects>
     <resources>
-        <image name="1_7_8.1" width="320" height="630.5"/>
+        <image name="1_7_8.1" width="320" height="630"/>
         <image name="1_7_8.2" width="283" height="251"/>
         <image name="1_7_8.3" width="320" height="101"/>
         <image name="1_7_8.4" width="122" height="29"/>
