--- a/Beehive/Classes/Modules/Mine/Info/Controller/LLForgotPasswordViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Info/Controller/LLForgotPasswordViewController.xib
@@ -61,6 +61,9 @@
                     <state key="normal" title="提交">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="submitAction:" destination="-1" eventType="touchUpInside" id="q3x-4S-rHE"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
